# repo-roast

./: AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  layman.md  pyproject.toml
demos/01-basic/: SCENARIO.md
docs/: INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
repo_roast/: __init__.py  __main__.py  cli.py  connect.py  core.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
